Fix playlist menu overflow

--- a/client/src/sass/player/playlist.scss
+++ b/client/src/sass/player/playlist.scss
@@ -8,6 +8,7 @@ $playlist-menu-width: 350px;
   background: rgba(0, 0, 0, 0.8);
   z-index: 101;
   transition: right 0.2s;
+  overflow-y: auto;
 
   // Hidden
   right: -$playlist-menu-width;
